--- a/zjazd6_05_12_2020_pd/pd-z6/src/styles.css
+++ b/zjazd6_05_12_2020_pd/pd-z6/src/styles.css
@@ -1,29 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+
+/* po najechaniu na jakikolwiek button na stronie */
+/* kursor zmieni sie w raczke */
+button:hover {
+    cursor: pointer;
 }
 
-/* baner edycji osoby do task4 (na cala strone html) */
-.edit_person_banner {
 
-    /* chowa wszystko poza danym div-em  */
-    overflow: hidden;
-
-    /* positioned relative to the viewport */
-    position: fixed;
-
-    /* zakrycie calej strony */
-    padding:0;
-    margin:0;
-
-    top:0; /* zacznij od samej gory */
-    left:0; /* zacznij od razu od lewej */
-
-    width: 100%; /* pokryj cala szerokosc */
-    height: 100%; /* pokryj cala wysokosc */
-
-    border: 3px solid gray;
-    background-color: lightblue;
-}
