dodano przejscie z landingPage do gamePage

--- a/zad_zal_sem1_10_01_2021/tetris/src/app/landing-page/landing-page.component.css
+++ b/zad_zal_sem1_10_01_2021/tetris/src/app/landing-page/landing-page.component.css
@@ -80,7 +80,7 @@ div.container {
   height: 100%; /* pokryj cala wysokosc */
 
   /* border: 3px solid gray; */
-  background-color: lightblue;
+  /* background-color: lightblue; */
 }
 .container {
   /* background: yellow; */
