--- a/zad_zal_sem1_10_01_2021/tetris/src/app/app.component.html
+++ b/zad_zal_sem1_10_01_2021/tetris/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div class="content" role="main">
     <landing-page [displayMe]="displayLandPage"
-		  [(playerName)]="playerName"
-		  [(playerEmail)]="playerEmail"
+		  (clicked)="toggleToLandPage($event)"
     ></landing-page>
     <br/>
-    <game-page></game-page>
+    <game-page [displayMe]="displayGamePage">
+    </game-page>
 </div>
