kosmetyka, gamePage, wyswietla teraz player-info

--- a/zad_zal_sem1_10_01_2021/tetris/src/app/app.component.html
+++ b/zad_zal_sem1_10_01_2021/tetris/src/app/app.component.html
@@ -3,6 +3,9 @@
 		  (clicked)="toggleToLandPage($event)"
     ></landing-page>
     <br/>
-    <game-page [displayMe]="displayGamePage">
+    <game-page [displayMe]="displayGamePage"
+	       [playerName]="playerName"
+	       [playerEmail]="playerEmail"
+    >
     </game-page>
 </div>
