--- a/zad_zal_sem1_10_01_2021/tetris/src/app/game-page/game-page.component.html
+++ b/zad_zal_sem1_10_01_2021/tetris/src/app/game-page/game-page.component.html
@@ -1,4 +1,12 @@
 <div [ngStyle]="{display: displayMe}">
+
+    <player-info
+	[playerName]="playerName"
+	[playerEmail]="playerEmail">
+    </player-info>
+
+    <button>Exit the game</button>
+
     <tetris-core #game></tetris-core>
 
     <button (click)="game.actionStart()">Start</button>
