--- a/zad_zal_sem1_10_01_2021/tetris/src/app/app.component.html
+++ b/zad_zal_sem1_10_01_2021/tetris/src/app/app.component.html
@@ -1,11 +1,14 @@
 <div class="content" role="main">
-    <landing-page [displayMe]="displayLandPage"
-		  (clicked)="toggleToLandPage($event)"
-    ></landing-page>
-    <br/>
-    <game-page [displayMe]="displayGamePage"
-	       [playerName]="playerName"
-	       [playerEmail]="playerEmail"
-    >
-    </game-page>
+  <landing-page
+    [displayMe]="displayLandPage"
+    (clicked)="toggleToLandPage($event)"
+  ></landing-page>
+  <br />
+  <game-page
+    [displayMe]="displayGamePage"
+    [playerName]="playerName"
+    [playerEmail]="playerEmail"
+    (clicked)="toggleToLandPage($event)"
+  >
+  </game-page>
 </div>
