--- a/zad_zal_sem1_10_01_2021/tetris/src/app/game-page/game-page.component.html
+++ b/zad_zal_sem1_10_01_2021/tetris/src/app/game-page/game-page.component.html
@@ -3,6 +3,7 @@
   </player-info>
 
   <p>Score: {{points}}</p>
+  <p>Time: {{time}}</p>
 
   <button (click)="exitGameButton(true)">Exit the game</button>
   <br />
