dodano historie gry

--- a/zad_zal_sem1_10_01_2021/tetris/src/app/game-page/game-page.component.html
+++ b/zad_zal_sem1_10_01_2021/tetris/src/app/game-page/game-page.component.html
@@ -14,9 +14,16 @@
   &nbsp;
   <button (click)="resetGame()">Reset</button>
   &nbsp;
-  <button (click)="drukujStatus()">Zobacz</button>
+  <button (click)="showHistory()">Show History</button>
+  <p>Game status: {{gameStatusDesc}}</p>
 
-  <!-- <p>Game status: {{gameStatusDesc}}</p> -->
+  <ul>
+      <li *ngFor="let hItem of history; let index=index">
+	  <p>
+	      {{hItem.timestamp}}&nbsp;{{hItem.actionName}}
+	  </p>
+      </li>
+  </ul>
 
   <tetris-core #game (lineCleared)="onLineCleared()"></tetris-core>
 
