dodano sortowanie po timestampie, testowac

--- a/zad_zal_sem1_10_01_2021/tetris/src/app/game-page/game-page.component.html
+++ b/zad_zal_sem1_10_01_2021/tetris/src/app/game-page/game-page.component.html
@@ -14,7 +14,7 @@
   &nbsp;
   <button (click)="resetGame()">Reset</button>
   &nbsp;
-  <button (click)="showHistory()">Show History</button>
+  <button (click)="sortByTimestamp()">{{sortingOrder}}</button>
   <p>Game status: {{gameStatusDesc}}</p>
 
   <ul>
