lekko uporz kod i popr wyglad, todo: rozbic na subkomponenty

--- a/zad_zal_sem1_10_01_2021/tetris/src/app/game-page/game-page.component.css
+++ b/zad_zal_sem1_10_01_2021/tetris/src/app/game-page/game-page.component.css
@@ -6,7 +6,7 @@ button {
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  /* font-size: 1.5em; */
+  font-size: 1.2em;
   font-weight: bold;
   border-radius: 0.4em;
 }
@@ -14,4 +14,15 @@ button {
 button:hover {
   cursor: pointer;
   background-color: #3584ff; /* different blue */
+}
+
+table > tr > td {
+  vertical-align: top;
+  padding: 1em;
+  width: 25%;
+}
+
+table > tr > td > table > tr > td {
+  vertical-align: top;
+  padding: 0.5em;
 }
