--- a/zad_zal_sem1_10_01_2021/tetris/src/app/game-page/player-info/player-info.component.html
+++ b/zad_zal_sem1_10_01_2021/tetris/src/app/game-page/player-info/player-info.component.html
@@ -1,7 +1,5 @@
 <div>
-    <!-- <h2>Wellcome. You are logged as:</h2>
-	 <h3>name: {{playerName}}, email {{playerEmail}}</h3>
-	 <h2>Let's play a game of tetris</h2> -->
-    <p>Wellcome. You are logged as:</p>
-    <p>name: {{playerName}}, email {{playerEmail}}</p>
+  <h2>Wellcome. You are logged as:</h2>
+  <h3>name: {{ playerName }}, email: {{ playerEmail }}</h3>
+  <h2>Let's play a game of tetris</h2>
 </div>
