--- a/zad_zal_sem1_10_01_2021/tetris/src/app/game-page/game-page.component.html
+++ b/zad_zal_sem1_10_01_2021/tetris/src/app/game-page/game-page.component.html
@@ -1,64 +1,80 @@
 <div [ngStyle]="{ display: displayMe }">
-  <player-info [playerName]="playerName" [playerEmail]="playerEmail">
-  </player-info>
-
-  <p>Score: {{points}}</p>
-  <p>Time: {{time}}</p>
-
-  <button (click)="exitGameButton(true)">Exit the game</button>
-  <br />
-  <br />
-  <button (click)="startGame()">Start</button>
-  &nbsp;
-  <button (click)="stopGame()">Stop</button>
-  &nbsp;
-  <button (click)="resetGame()">Reset</button>
-  &nbsp;
-  <button (click)="sortByTimestamp()">{{sortingOrder}}</button>
-  <p>Game status: {{gameStatusDesc}}</p>
-
-  <select name="historyItem" id="historyItems"
-	  [(ngModel)]="hItemSelect">
-      <option [ngValue]="hItem"
-	      *ngFor="let hItem of allowedHistoryEntries">
-        {{hItem}}
-      </option>
-    </select>
-
-    <h2>Game history: </h2>
-  <ul>
-      <li *ngFor="let hItem of history | historyFilter:hItemSelect; 
-		  let index=index">
-	  <p>
-	      {{hItem.timestamp}}&nbsp;{{hItem.actionName}}
-	  </p>
-      </li>
-  </ul>
-
-  <tetris-core #game (lineCleared)="onLineCleared()"></tetris-core>
-
-
   <table>
     <tr>
-      <td></td>
-      <td></td>
-      <td></td>
+      <td>
+        <player-info [playerName]="playerName" [playerEmail]="playerEmail">
+        </player-info>
+        <button (click)="exitGameButton(true)">Exit the game</button>
+      </td>
+      <td>
+        <tetris-core #game (lineCleared)="onLineCleared()"></tetris-core>
+      </td>
+      <td>
+        <h3>Score: {{ points }}</h3>
+        <h3>Time: {{ time }}</h3>
+        <h3>Game status: {{ gameStatusDesc }}</h3>
+        <hr />
+        <h3>Main game options:</h3>
+        <button (click)="startGame()">Start</button>
+        &nbsp;
+        <button (click)="stopGame()">Stop</button>
+        &nbsp;
+        <button (click)="resetGame()">Reset</button>
+        <br />
+        <br />
+        <hr />
+        <h3>Navigation panel:</h3>
+        <table>
+          <tr>
+            <td>
+              <button (click)="game.actionLeft()">&#8678;</button>
+            </td>
+            <td>
+              <button (click)="game.actionRotate()">&#10226;</button>
+            </td>
+            <td>
+              <button (click)="game.actionRight()">&#8680;</button>
+            </td>
+          </tr>
+          <tr>
+            <td></td>
+            <td>
+              <button (click)="game.actionDown()">&#8681;</button>
+            </td>
+            <td></td>
+          </tr>
+        </table>
+      </td>
+      <td>
+        <span>Sort history by timestamp: </span>
+        <button (click)="sortByTimestamp()">{{ sortingOrder }}</button>
+        <br /><br />
+        <label for="historyItems"> Filter history by status: </label>
+        <select name="historyItems" id="historyItems" [(ngModel)]="hItemSelect">
+          <option [ngValue]="hItem" *ngFor="let hItem of allowedHistoryEntries">
+            {{ hItem }}
+          </option>
+        </select>
+        <br />
+        <br />
+        <hr />
+        <h3>Game history:</h3>
+        <ul>
+          <li
+            *ngFor="
+              let hItem of history | historyFilter: hItemSelect;
+              let index = index
+            "
+          >
+            <p>{{ hItem.timestamp }}&nbsp;{{ hItem.actionName }}</p>
+          </li>
+        </ul>
+      </td>
     </tr>
     <tr>
-      <td>
-        <button (click)="game.actionLeft()">&#8678;</button>
-      </td>
-      <td>
-        <button (click)="game.actionRotate()">&#10226;</button>
-      </td>
-      <td>
-        <button (click)="game.actionRight()">&#8680;</button>
-      </td>
-    </tr>
-    <tr>
       <td></td>
       <td>
-        <button (click)="game.actionDown()">&#8681;</button>
+        <authors-info></authors-info>
       </td>
       <td></td>
     </tr>
