quick correction (obsluga on game over)

--- a/zad_zal_sem1_10_01_2021/tetris/src/app/game-page/game-page.component.html
+++ b/zad_zal_sem1_10_01_2021/tetris/src/app/game-page/game-page.component.html
@@ -7,7 +7,11 @@
         <button (click)="exitGameButton(true)">Exit the game</button>
       </td>
       <td>
-        <tetris-core #game (lineCleared)="onLineCleared()"></tetris-core>
+        <tetris-core
+          #game
+          (lineCleared)="onLineCleared()"
+          (gameOver)="onGameOver()"
+        ></tetris-core>
       </td>
       <td>
         <h3>Score: {{ points }}</h3>
