zmiana display- Land i Game-page z none|block do *ngIf

--- a/zad_zal_sem1_10_01_2021/tetris/src/app/app.component.html
+++ b/zad_zal_sem1_10_01_2021/tetris/src/app/app.component.html
@@ -1,11 +1,11 @@
 <div class="content" role="main">
   <landing-page
-    [displayMe]="displayLandPage"
+    *ngIf="displayLandPage"
     (clicked)="toggleToLandPage($event)"
   ></landing-page>
   <br />
   <game-page
-    [displayMe]="displayGamePage"
+    *ngIf="displayGamePage"
     [playerName]="playerName"
     [playerEmail]="playerEmail"
     (clicked)="toggleToLandPage($event)"
