--- a/zad_zal_sem1_10_01_2021/tetris/src/app/landing-page/landing-page.component.html
+++ b/zad_zal_sem1_10_01_2021/tetris/src/app/landing-page/landing-page.component.html
@@ -1,4 +1,4 @@
-<div [ngStyle]="{ display: displayMe }" class="container">
+<div>
   <div class="centered-div">
     <h1>Hello stranger!</h1>
     <h2>Do You have the guts to play for blood?</h2>
