zamiana sortAZ z literek na boolean

--- a/zad_zal_sem1_10_01_2021/tetris/src/app/game-page/game-page.component.html
+++ b/zad_zal_sem1_10_01_2021/tetris/src/app/game-page/game-page.component.html
@@ -51,7 +51,7 @@
       </td>
       <td>
         <span>Sort history by timestamp: </span>
-        <button (click)="sortByTimestamp()">{{ sortingOrder }}</button>
+        <button (click)="sortByTimestamp()">{{ sortAZ ? "A-Z" : "Z-A" }}</button>
         <br /><br />
         <label for="historyItems"> Filter history by status: </label>
         <select name="historyItems" id="historyItems" [(ngModel)]="hItemSelect">
