dod. podst routingu, tj. wysw landing/game-page, oraz goto game-page

--- a/sem2_zjazd1_06_03_2021_pd/tetris/src/app/app.component.html
+++ b/sem2_zjazd1_06_03_2021_pd/tetris/src/app/app.component.html
@@ -1,14 +1,3 @@
 <div class="content" role="main">
-  <landing-page
-    *ngIf="displayLandPage"
-    (clicked)="toggleToLandPage($event)"
-  ></landing-page>
-  <br />
-  <game-page
-    *ngIf="displayGamePage"
-    [playerName]="playerName"
-    [playerEmail]="playerEmail"
-    (clicked)="toggleToLandPage($event)"
-  >
-  </game-page>
 </div>
+<router-outlet></router-outlet>
