--- a/sem2_zjazd1_06_03_2021_pd/tetris/src/app/landing-page/landing-page.component.css
+++ b/sem2_zjazd1_06_03_2021_pd/tetris/src/app/landing-page/landing-page.component.css
@@ -1,19 +1,24 @@
-button {
-  background-color: #3584d4; /* blue */
-  border: none;
-  color: white;
-  padding: 0.4em 0.8em;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 1.5em;
-  font-weight: bold;
-  border-radius: 0.4em;
+.button-link {
+    background-color: #008CBA; /* blue */
+    border: none;
+    border-radius: 0.4em;
+    color: white;
+    padding: 0.4em 0.8em;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 1em;
+    font-weight: bold;
 }
 
-button:hover {
-  cursor: pointer;
-  background-color: #3584ff; /* different blue */
+.button-link:hover {
+    cursor: pointer;
+}
+
+.disabled-link {
+    background-color: lightgray;
+    cursor: auto;
+    pointer-events: none;
 }
 
 legend {
