--- a/sem2_zjazd1_06_03_2021_pd/tetris/src/app/intro-page/player-form/player-form.component.css
+++ b/sem2_zjazd1_06_03_2021_pd/tetris/src/app/intro-page/player-form/player-form.component.css
@@ -1,24 +1,12 @@
-.button-link {
-    background-color: #008CBA; /* blue */
-    border: none;
-    border-radius: 0.4em;
-    color: white;
-    padding: 0.4em 0.8em;
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.5em;
+}
+
+.centered-div {
     text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 1em;
-    font-weight: bold;
-}
-
-.button-link:hover {
-    cursor: pointer;
-}
-
-.disabled-link {
-    background-color: lightgray;
-    cursor: auto;
-    pointer-events: none;
 }
 
 legend {
@@ -65,15 +53,6 @@ input[type="email"]:invalid {
 
 input[type="email"]:valid {
   border-left: 0.5em solid #c9fec9;
-}
-
-.centered-div {
-  width: 40%;
-  margin: 0% 30% 30%;
-  padding: 2em;
-  background-color: white;
-  border-radius: 0em 0em 2em em;
-  text-align: center;
 }
 
 p {
