--- a/sem2_zjazd1_06_03_2021_pd/tetris/src/app/intro-page/player-form/player-form.component.html
+++ b/sem2_zjazd1_06_03_2021_pd/tetris/src/app/intro-page/player-form/player-form.component.html
@@ -1,13 +1,11 @@
-<div>
+<div class="container">
   <div class="centered-div">
-    <h1>Hello stranger!</h1>
-    <h2>Do You have the guts to play for blood?</h2>
-    <br />
-    <p>Enter Your data below and play tetris</p>
+    <h2>Enter Your data below and play tetris</h2>
     <fieldset>
       <legend>Player's Name</legend>
       <input
-        [(ngModel)]="playerName"
+        [ngModel]="playerName"
+        (ngModelChange)="setPlayerName($event)"
         maxLength="18"
         placeholder="Enter Your Name..."
         type="text"
@@ -18,7 +16,8 @@
     <fieldset>
       <legend>Player's email</legend>
       <input
-        [(ngModel)]="playerEmail"
+        [ngModel]="playerEmail"
+        (ngModelChange)="setPlayerEmail($event)"
         maxLength="18"
         placeholder="Enter Your e-mail address..."
         type="email"
@@ -27,15 +26,5 @@
       />
     </fieldset>
     <br />
-    <a
-      routerLink="/gamePage"
-      routerLinkActive="active"
-      [ngClass]="{ 'button-link': true, 'disabled-link': !mayGoToGamePage() }"
-      class="button-link"
-    >
-      I'm Your Huckellberry, and that's just my game!
-    </a>
-
-    <authors-info></authors-info>
   </div>
 </div>
