dodano przekazywanie danych gracza za pomoca serwisu playerData

--- a/sem2_zjazd1_06_03_2021_pd/tetris/src/app/game-page/game-page.component.html
+++ b/sem2_zjazd1_06_03_2021_pd/tetris/src/app/game-page/game-page.component.html
@@ -2,7 +2,7 @@
   <table>
     <tr>
       <td>
-        <player-info [playerName]="playerName" [playerEmail]="playerEmail">
+        <player-info>
         </player-info>
         <a
           routerLink="/introPage"
