kosmetyka, czyszczenie, usuniecie paru drobiazgow/pozostalosci

--- a/sem2_zjazd1_06_03_2021_pd/tetris/src/app/game-page/game-page.component.html
+++ b/sem2_zjazd1_06_03_2021_pd/tetris/src/app/game-page/game-page.component.html
@@ -8,7 +8,7 @@
           routerLink="/introPage"
           routerLinkActive="active"
           [ngClass]="{ 'button-link': true }"
-          (click)="exitGameButton(true)"
+          (click)="exitGameButton()"
         >
           Exit the game
         </a>
