--- a/sem2_zaliczenie/tetris/src/app/intro-page/intro-page.component.html
+++ b/sem2_zaliczenie/tetris/src/app/intro-page/intro-page.component.html
@@ -1,16 +1,5 @@
 <div>
   <intro-text></intro-text>
-  <player-form
-      (mayGoToGamePageEvent)="mayGoToGamePage=$event"
-  ></player-form>
-  <div class="container">
-    <a
-      routerLink="/gamePage"
-      routerLinkActive="active"
-      [ngClass]="{ 'button-link': true, 'disabled-link': !mayGoToGamePage }"
-    >
-      I'm Your Huckellberry, and that's just my game!
-    </a>
-  </div>
+  <player-form></player-form>
   <authors-info></authors-info>
 </div>
