--- a/sem2_zaliczenie/tetris/src/app/game-page/game-page.component.html
+++ b/sem2_zaliczenie/tetris/src/app/game-page/game-page.component.html
@@ -18,6 +18,7 @@
           #game
           (lineCleared)="onLineCleared()"
           (gameOver)="onGameOver()"
+	  class="{{colorPalette === 'high-contrast' ? 'black-and-white' : ''}}"
         ></tetris-core>
       </td>
       <td>
