--- a/sem2_zaliczenie/tetris/src/app/intro-page/player-form/player-form.component.css
+++ b/sem2_zaliczenie/tetris/src/app/intro-page/player-form/player-form.component.css
@@ -60,7 +60,7 @@ p {
 }
 
 .button-link {
-    background-color: #008CBA; /* blue */
+    background-color: #008CBA;
     border: none;
     border-radius: 0.4em;
     color: white;
