poprawiono przekazywanie kolorow miedzy komponentami

--- a/sem2_zaliczenie/tetris/src/app/intro-page/player-form/player-form.component.html
+++ b/sem2_zaliczenie/tetris/src/app/intro-page/player-form/player-form.component.html
@@ -39,7 +39,7 @@
     <br />
     <br />
     <a
-      routerLink="/gamePage"
+      routerLink="/gamePage/{{colorPalette}}"
       routerLinkActive="active"
       [ngClass]="{
         'button-link': true,
