--- a/sem2_zaliczenie/tetris/src/app/intro-page/player-form/player-form.component.html
+++ b/sem2_zaliczenie/tetris/src/app/intro-page/player-form/player-form.component.html
@@ -20,7 +20,7 @@
         (ngModelChange)="setPlayerId($event)"
         maxLength="18"
         placeholder="Enter Your student's ID..."
-        type="text"
+        type="password"
         required
       />
     </fieldset>
