czyszczenie, prettier-js-owanie, naprawianie uszkodzonych importow

--- a/sem2_zaliczenie/tetris/src/app/game-page/game-page.component.html
+++ b/sem2_zaliczenie/tetris/src/app/game-page/game-page.component.html
@@ -2,8 +2,7 @@
   <table>
     <tr>
       <td>
-        <player-info>
-        </player-info>
+        <player-info> </player-info>
         <a
           routerLink="/introPage"
           routerLinkActive="active"
@@ -18,7 +17,9 @@
           #game
           (lineCleared)="onLineCleared()"
           (gameOver)="onGameOver()"
-	  class="{{colorPalette === 'high-contrast' ? 'black-and-white' : ''}}"
+          class="{{
+            colorPalette === 'high-contrast' ? 'black-and-white' : ''
+          }}"
         ></tetris-core>
       </td>
       <td>
